# stubalyzer

./: .bumpversion.cfg  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pypirc  CHANGELOG.rst  LICENSE  README.md  README.rst  analyze.py  analyze_example.py  mypy.ini  pyproject.toml  repl.py  requirements.in  requirements.txt  setup.py
.circleci/: config.yaml  config.yml
dev/: ensure_venv.sh  fmt.sh  lint.sh  pre-commit.sh  release.sh  setup.sh  update-apidoc.sh  util.sh
docs/: conf.py  index.rst  requirements.txt
docs/api/: index.rst  modules.rst  stub_analyzer.analyze.rst  stub_analyzer.collect.rst  stub_analyzer.compare.rst  stub_analyzer.lookup.rst  stub_analyzer.rst  stub_analyzer.types.rst  stub_analyzer.utils.rst  stubalyzer.analyze.rst  stubalyzer.collect.rst  stubalyzer.compare.rst  stubalyzer.lookup.rst  stubalyzer.rst  stubalyzer.types.rst  stubalyzer.utils.rst
examples/: analyze_stub_analyzer.py
scripts/: compare_and_find_missing.py  find_missing_symbols.py  run_compare.py  serialize_type.py
stub_analyzer/: __init__.py  __main__.py  analyze.py  analyze_test.py  analyze_unit_test.py  api.py  api_test.py  collect.py  collect_test.py  compare.py  compare_stubs.py  compare_test.py  conftest.py  lookup.py  lookup_test.py  stub_analyzer.py  stub_analyzer_test.py  type_data.py  types.py  utils.py  utils_unit_test.py
stub_analyzer/stubs/: expected_mismatches.json
stub_analyzer/stubs/_pytest/: fixtures.pyi
stub_analyzer/test_data/reference_symbols/: freezegun.api.StepTickTimeFactory.tick.json  passlib.hash.bcrypt.json  passlib.hash.md5_crypt.json  passlib.utils.handlers.GenericHandler.hash.json  (+1 more)
stubalyzer/: __init__.py  __main__.py  analyze.py  analyze_test.py  analyze_unit_test.py  collect.py  collect_test.py  compare.py  compare_test.py  compare_typevars_test.py  lookup.py  lookup_test.py  types.py  utils.py  utils_unit_test.py
stubalyzer/stubs/: pytest.pyi  schema.pyi
stubs-generated/elasticsearch/: __init__.pyi
stubs-generated/freezegun/: __init__.pyi  _async.pyi  api.pyi
stubs-generated/passlib/: __init__.pyi  apache.pyi  apps.pyi  context.pyi  exc.pyi  hash.pyi  hosts.pyi  ifc.pyi  pwd.pyi  registry.pyi  totp.pyi  win32.pyi
stubs-handwritten/: expected_mismatches.json
stubs-handwritten/freezegun/: api.pyi
stubs-handwritten/passlib/: hash.pyi  ifc.pyi
test_code/: elasticsearch.py  freeze.py  main.py  run_mypy.sh
testing/: mypy.ini  test_report.xml
testing/stub-expectations/: additional_function_params.json  matching.json  mislocated_symbol.json  mismatching.json  missing.json
testing/stubs-generated/: classes.pyi  functions.pyi  mismatching.pyi  mypy_node_factory_test_nodes.pyi  type_aliases.pyi  typevars.pyi
testing/stubs-handwritten/: classes.pyi  decorators.pyi  functions.pyi  matching.pyi  mismatching.pyi  missing.pyi  mypy_node_factory_test_nodes.pyi  typevars.pyi  vars.pyi
testing/util/: __init__.py  mypy_node_factory.py  mypy_node_factory_unit_test.py  stub_config.py
(+108 files in other folders)
